--- a/clientt/src/App.css
+++ b/clientt/src/App.css
@@ -1,4 +1,11 @@
 /* //loader */
+@import url('https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap');
+.platypi {
+  font-family: "Platypi", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 .ball {
     position: relative;
     bottom: 50px;
@@ -50,4 +57,8 @@
       left: calc(0% - 20px);
       transform: rotate(0deg);
     }
+  }
+
+  .btn-primary{
+    @apply bg-black px-8 py-2 rounded-lg text-white
   }
